cleanup, add documentation

--- a/4-adc-dac-dma/adc/Debug/makefile
+++ b/4-adc-dac-dma/adc/Debug/makefile
@@ -46,8 +46,8 @@ adc.bin \
 all: adc.elf secondary-outputs
 
 # Tool invocations
-adc.elf: $(OBJS) $(USER_OBJS) E:\PWR\Semestr6\Sterowniki_robotow\STM32_SR\adc\STM32L476RGTX_FLASH.ld
-	arm-none-eabi-gcc -o "adc.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"E:\PWR\Semestr6\Sterowniki_robotow\STM32_SR\adc\STM32L476RGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="adc.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
+adc.elf: $(OBJS) $(USER_OBJS) E:\PWR\Semestr6\Sterowniki_robotow\STM32_SR\4-adc-dac-dma\adc\STM32L476RGTX_FLASH.ld
+	arm-none-eabi-gcc -o "adc.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"E:\PWR\Semestr6\Sterowniki_robotow\STM32_SR\4-adc-dac-dma\adc\STM32L476RGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="adc.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
